[gd_scene load_steps=4 format=2]

[ext_resource path="res://Entities/Airship.gd" type="Script" id=1]
[ext_resource path="res://Graphics/airship.png" type="Texture" id=2]

[sub_resource type="Animation" id=1]

resource_name = "Shine"
length = 0.8
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("body/Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 0, 0, 32, 32 ), Rect2( 32, 0, 32, 32 ), Rect2( 64, 0, 32, 32 ), Rect2( 96, 0, 32, 32 ), Rect2( 128, 0, 32, 32 ), Rect2( 160, 0, 32, 32 ), Rect2( 192, 0, 32, 32 ), Rect2( 0, 0, 32, 32 ) ]
}

[node name="Airship" type="Node2D"]
scale = Vector2( 2, 2 )
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/Shine = SubResource( 1 )
blend_times = [  ]

[node name="body" type="KinematicBody2D" parent="."]
input_pickable = false
collision_layer = 1
collision_mask = 10
collision/safe_margin = 0.08
motion/sync_to_physics = false

[node name="Sprite" type="Sprite" parent="body"]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 0, 0, 32, 32 )

[node name="collider" type="CollisionPolygon2D" parent="body"]
build_mode = 0
polygon = PoolVector2Array( 16, 12, -16, 12, -16, 4, -9, -2, -9, -10, 0, -16, 9, -10, 9, -2, 16, 4 )

[node name="ShootCooldown" type="Timer" parent="."]
process_mode = 1
wait_time = 0.1
one_shot = false
autostart = false

[node name="CleanCooldown" type="Timer" parent="."]
process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[connection signal="timeout" from="ShootCooldown" to="." method="_on_ShootCooldown_timeout"]
[connection signal="timeout" from="CleanCooldown" to="." method="_on_CleanCooldown_timeout"]
